changes in dispatcher blog document based authoring blog and introduction to eds blog

--- a/blogs/Introduction-to-Document-Based-Authoring.html
+++ b/blogs/Introduction-to-Document-Based-Authoring.html
@@ -57,7 +57,7 @@
          <div class="blog-items">
          <div>
             <p>Happy to find you here. Welcome to another learning.</p>
-            <h2>Document Based Authoring</h2>
+            <h3 style="text-align: left;">Document Based Authoring</h3>
             <p>Document-Based Authoring (DBA) in Adobe Experience Manager (AEM) is a content authoring paradigm designed to simplify the creation, management, and delivery of structured content. Unlike traditional page-based authoring, where authors focus on creating and managing individual web pages, DBA allows authors to work with content in a more modular, reusable, and centralized way, often in the form of documents</p>
             <p>currently when a request comes the content is served through the publish instance but with Edge Delivery Service the content is served through EDS and no publish instance is required.We can build, run a website on AEM as cloud without using AEM.</p>
             <div class="image-container">
@@ -71,7 +71,7 @@
             </ul>
          </div>
          <div>
-            <h2>Steps to create and configure Edge Delivery Services Project</h2>
+            <h3 style="text-align: left;">Steps to create and configure Edge Delivery Services Project</h3>
             <ul class="ff_ul" style="padding: 10px;">
                <li>Create new repository in your github using this template <a href="https://github.com/adobe/aem-boilerplate" target="_blank">https://github.com/adobe/aem-boilerplate</a></li>
                <div class="image-container">
