--- a/blogs/aemcaas-dispatcher.html
+++ b/blogs/aemcaas-dispatcher.html
@@ -58,7 +58,7 @@
                         style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span> Migrating the
                     Dispatcher Configuration from AMS to AEM as a Cloud Service </p>
 
-                <p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
+                <p class="dispatcherTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
 				width: fit-content; padding: 3px 15px;">Dispatcher</p>
                 <h1 class="title">Migrating the Dispatcher Configuration from AMS to AEM as a Cloud Service</h1>
                 <span class="author">Infodales Tech Solutions | </span>
