--- a/blogs/Introduction-to-Document-Based-Authoring.html
+++ b/blogs/Introduction-to-Document-Based-Authoring.html
@@ -22,7 +22,7 @@
    <body>
       <!-- Header -->
       <section class="sub-header"
-         style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ Sites.jpg');">
+         style="background-image: linear-gradient(rgba(4, 9, 30, 0.5), rgba(4, 9, 30, 0.5)), url('/images/Cover\ EDS.jpg');">
          <nav>
          <a href="/index.html"><img src="/images/infodales/Info Dales Main Logo 03.webp" alt="logo">
          </a>
@@ -44,8 +44,8 @@
          <div>
          <div class="blog spa-blog">
          <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Introduction to Edge Delivery Services</p>
-         <p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
-            width: fit-content; padding: 3px 15px;">AEM Sites</p>
+         <p class="edsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
+            width: fit-content; padding: 3px 15px;">AEM EDS</p>
          <h1 class="title">Introduction to Document Based Authoring</h1>
          <span class="author">Infodales Tech Solutions</span> |
          <span class="date">December 10, 2024</span>
