--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blogs | Infodales Tech Solution" />
     <meta property="og:description" content="Exploring AEM through Blogs" />
-    <meta property="og:url" content="https://infodales.com/blog.html" />
+    <meta property="og:url" content="https://infodales.com/blogs.html" />
     <meta property="og:site_name" content="Blogs | Infodales Tech Solution" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +34,7 @@
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
-					<li><a href="blog.html">BLOGS</a></li>
+					<li><a href="blogs.html">BLOGS</a></li>
 					<li><a href="career.html">CAREER</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 					<ul>
