--- a/blogs/OsgiConfigurationFactory.html
+++ b/blogs/OsgiConfigurationFactory.html
@@ -35,7 +35,7 @@
 					<li><a href="/index.html">HOME</a></li>
 					<li><a href="/about.html">ABOUT</a></li>
 					<li><a href="/services.html">SERVICES</a></li>
-					<li><a href="/blog.html">BLOGS</a></li>
+					<li><a href="/blogs.html">BLOGS</a></li>
 					<li><a href="/career.html">CAREER</a></li>
 					<li><a href="/contact.html">CONTACT</a></li>
 					<ul>
@@ -48,7 +48,7 @@
 		<div>
 			<div class="blog spa-blog">
 				
-				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>OSGI Configuration Factory</p>
+				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>OSGI Configuration Factory</p>
 
 				<p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
 				width: fit-content; padding: 3px 15px;">AEM Sites</p>
