--- a/blogs/aemcaas-dispatcher.html
+++ b/blogs/aemcaas-dispatcher.html
@@ -40,7 +40,7 @@
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/about.html">ABOUT</a></li>
                     <li><a href="/services.html">SERVICES</a></li>
-                    <li><a href="/blog.html">BLOGS</a></li>
+                    <li><a href="/blogs.html">BLOGS</a></li>
                     <li><a href="/career.html">CAREER</a></li>
                     <li><a href="/contact.html">CONTACT</a></li>
                     <ul>
@@ -54,7 +54,7 @@
         <div>
             <div class="blog">
 
-                <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html"
+                <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html"
                         style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span> Migrating the
                     Dispatcher Configuration from AMS to AEM as a Cloud Service </p>
 
