--- a/blogs/forms-introduction.html
+++ b/blogs/forms-introduction.html
@@ -38,7 +38,7 @@
               <a href="/services.html">SERVICES</a>
             </li>
             <li>
-              <a href="/blog.html">BLOGS</a>
+              <a href="/blogs.html">BLOGS</a>
             </li>
             <li>
               <a href="/career.html">CAREER</a>
@@ -57,7 +57,7 @@
       	<div>
         	<div class="blog">
           		<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;">
-            		<a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a>
+            		<a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a>
             		<span> ></span> Introduction to AEM Form
          		 </p>
           		<p class="formsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
