--- a/blogs/placeholders-in-Edge-Delivery-Services.html
+++ b/blogs/placeholders-in-Edge-Delivery-Services.html
@@ -32,7 +32,7 @@
             <li><a href="/index.html">HOME</a></li>
             <li><a href="/about.html">ABOUT</a></li>
             <li><a href="/services.html">SERVICES</a></li>
-            <li><a href="/blog.html">BLOGS</a></li>
+            <li><a href="/blogs.html">BLOGS</a></li>
             <li><a href="/career.html">CAREER</a></li>
             <li><a href="/contact.html">CONTACT</a></li>
             <ul>
@@ -43,7 +43,7 @@
       <section class="blog-content">
          <div>
          <div class="blog spa-blog">
-         <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Implementing redirects and response header in Edge Delivery Services</p>
+         <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Implementing redirects and response header in Edge Delivery Services</p>
          <p class="edsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
             width: fit-content; padding: 3px 15px;">AEM EDS</p>
          <h1 class="title">Placeholders in Edge Delivery Services</h1>
