--- a/blogs/Introduction-to-EDS.html
+++ b/blogs/Introduction-to-EDS.html
@@ -35,22 +35,20 @@
 					<li><a href="/index.html">HOME</a></li>
 					<li><a href="/about.html">ABOUT</a></li>
 					<li><a href="/services.html">SERVICES</a></li>
-					<li><a href="/blog.html">BLOGS</a></li>
+					<li><a href="/blogs.html">BLOGS</a></li>
 					<li><a href="/career.html">CAREER</a></li>
 					<li><a href="/contact.html">CONTACT</a></li>
 					<ul>
 			</div>
 			<i class="fa fa-bars" onclick="showMenu()"></i>
 		</nav>
-		<!-- <p style="color: lightgray; margin-left: 17%;"><a href="./blog.html" style="text-decoration: none; color: white; cursor: pointer;">Blogs</a> <span> > </span> Getting started with SPA</p> -->
-		<!-- <h1>Blogs</h1> -->
 	</section>
 	<!--  Blog Page Content --->
 	<section class="blog-content">
 		<div>
 			<div class="blog spa-blog">
 				
-				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>What is Edge Delivery Service</p>
+				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>What is Edge Delivery Service</p>
 
 				<p class="edsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
 				width: fit-content; padding: 3px 15px;">AEM EDS</p>
