--- a/blogs/aem-msm.html
+++ b/blogs/aem-msm.html
@@ -35,7 +35,7 @@
 					<li><a href="/index.html">HOME</a></li>
 					<li><a href="/about.html">ABOUT</a></li>
 					<li><a href="/services.html">SERVICES</a></li>
-					<li><a href="/blog.html">BLOGS</a></li>
+					<li><a href="/blogs.html">BLOGS</a></li>
 					<li><a href="/career.html">CAREER</a></li>
 					<li><a href="/contact.html">CONTACT</a></li>
 					<ul>
@@ -47,7 +47,7 @@
 	<section class="blog-content">
 		<div>
 			<div class="blog">
-				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blog.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>MSM (Multi Site Manager)</p>
+				<p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>MSM (Multi Site Manager)</p>
 	
 				<p class="sitesTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">AEM Sites</p>
 				<h1 class="title">MSM (Multi Site Manager)</h1>
