--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
-					<li><a href="blog.html">BLOGS</a></li>
+					<li><a href="blogs.html">BLOGS</a></li>
 					<li><a href="career.html">CAREER</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				<ul>
