changes in Placeholders in Edge Delivery Services

--- a/blogs/placeholders-in-Edge-Delivery-Services.html
+++ b/blogs/placeholders-in-Edge-Delivery-Services.html
@@ -56,7 +56,7 @@
          <hr style="margin: 20px 0 10px 0;">
          <div class="blog-items">
          <div>
-            <p>Happy to find you here. Welcome to another learning.</p>
+            <p style="margin-top: 0%;">Happy to find you here. Welcome to another learning.</p>
             <h3 style="text-align: left;">What is Placeholder?</h3>
             <p style="margin-top: 0%;">Placeholders in AEM Edge Delivery Services (EDS) are dynamically replaceable tokens or variables that are used in configurations, rules, or templates to customize content delivery based on contextual data. They act as placeholders for dynamic values that are resolved at runtime, such as user-specific details, device information, geolocation, or other attributes.</p>
             <p style="margin-top: 0%;">In most websites, there are strings or variables that will be used throughout the site. Especially in sites that need to support multiple languages, it is not a good idea to hard code such values. Instead, placeholders can be used and managed centrally.</p>
