--- a/blogs/placeholders-in-Edge-Delivery-Services.html
+++ b/blogs/placeholders-in-Edge-Delivery-Services.html
@@ -93,7 +93,7 @@
             <div class="image-container">
                <img src="../images/placeholders-in-EDS/final-output.webp" style="width: 70%;  margin-top: 15px;" alt="final-output"/>
             </div>
-            <p>Thanks fo reading 😄</p>
+            <p>Thanks for reading 😄</p>
          </div>
          </div>
          <hr style="margin-top: 30px;"/>
