changes in blog - Placeholders in Edge Delivery Services

--- a/blogs/placeholders-in-Edge-Delivery-Services.html
+++ b/blogs/placeholders-in-Edge-Delivery-Services.html
@@ -43,7 +43,7 @@
       <section class="blog-content">
          <div>
          <div class="blog spa-blog">
-         <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Implementing redirects and response header in Edge Delivery Services</p>
+         <p style="color: rgb(133, 133, 133); padding: 0 0 10px 0;"><a href="/blogs.html" style="text-decoration: none; cursor: pointer;">Blogs</a> <span> > </span>Placeholders in Edge Delivery Services</p>
          <p class="edsTag" style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; 
             width: fit-content; padding: 3px 15px;">AEM EDS</p>
          <h1 class="title">Placeholders in Edge Delivery Services</h1>
