Blog for Content Transfer Tool

--- a/blogs.html
+++ b/blogs.html
@@ -203,6 +203,21 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/content-transfer-tool.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image" style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;" title="Content Transfer Tool (CTT) Overview: Migrating Content to AEM as a Cloud Service">Content Transfer Tool (CTT) Overview: Migrating Content to AEM as a Cloud Service</p>
+						</div>
+						<p class="publishDate">September 14, 2024</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/query-builder.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
